--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
     gap: 35px;
 }
 
-/* Striking navbar font */
 .nav-links li a {
     text-decoration: none;
     color: #fff;
@@ -66,8 +65,9 @@
 /* Last sentence styling */
 .highlight-sentence {
     font-family: 'Playfair Display', serif;
-    font-size: 28px; /* bigger */
+    font-size: 50px; /* much bigger */
     font-weight: 700;
     color: #2e7d32;
-    margin-top: 30px;
+    margin-top: 40px;
+    text-align: center; /* center the text */
 }
